# lidar3d

./: CMakeLists.txt  README.md  package.xml
include/: cluster.h  ground_removal.h  message_parsing.h  utils.h  visuals.h
src/: classification.cpp  cluster.cpp  ground_removal.cpp  main.cpp  message_parsing.cpp  utils.cpp  visuals.cpp
src/legacy/: clusters.json  color_train.py  filter.cpp  legacy_code.cpp
